--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "url": "git+https://github.com/kentookura/scriptorium"
   },
   "dependencies": {
+    "@types/node": "^18.8.2",
     "decimal.js": "^10.3.1",
-    "marked": "^4.0.15"
+    "ical-js-parser": "^0.7.0",
+    "ical.js": "^1.5.0",
+    "marked": "^4.0.15",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "esbuild": "^0.14.38",
+    "fs": "^0.0.1-security",
     "purs-backend-es": "^1.1.0"
   }
 }
