--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 output
-dist
-src/Calendar
 .psc*
 tsconfig.json
 .direnv
 .spago
-dist
+dist/main.js
 output-es
 node_modules
+bower_components
+assets
